--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Metal&display=swap");
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
@@ -12,6 +12,7 @@
         "Noto Color Emoji";
     --font-TitleFont: "Inknut Antiqua", serif;
     --font-Primary: "DM Sans", serif;
+    --font-Secondary: "Metal", serif;
     --color-bgPrimary: #fff1db;
     --color-bgSecondary: #4c280a;
     --color-txtPrimary: #ffffff;
