--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,7 @@
     --font-Secondary: "Metal", serif;
     --color-bgPrimary: #fff1db;
     --color-bgSecondary: #4c280a;
+    --color-bgColor: #FFECC9;
     --color-txtPrimary: #ffffff;
     --color-txtSecondary: #4c280a;
     --color-txtTertiary: #000000;
@@ -25,6 +26,7 @@
     --color-btnColor2: #e19517;
     --color-txtExtra: #524242;
     --color-colorExtra: #ffecc9;
+    --color-footerBg: #935831;
 }
 
 @layer utilities {
